Added page dots

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://abanik519.github.io/woman-and-bear-r2-C-PP",
+  "homepage": "https://cplscsd.github.io/woman-and-bear-r2-C-PP",
   "name": "control__pp",
   "version": "0.1.0",
   "private": true,
